# auto-lift-classes

./: CHANGELOG.md  LICENSE  auto-lift-classes.cabal
example/: test.hs
src/: AutoLift.hs
src/AutoLift/: Coercible.hs  Functor.hs  Machinery.hs
