cabal-version:       2.0
name:                auto-lift-classes
version:             0.1.0.0
synopsis:            Automatic (Show|Read)(1|2)
license:             BSD-3-Clause
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
copyright:           (c) 2018-2023, Koji Miyazato
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with:         GHC ==9.4.3

library
  exposed-modules:     AutoLift
  build-depends:       base >=4.12
                     , reflection
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
